slight modification for correct overflow behavior

--- a/responsive_web_design/personal_portfolio_new/stylesheets/explorer.css
+++ b/responsive_web_design/personal_portfolio_new/stylesheets/explorer.css
@@ -11,6 +11,7 @@
     width: var(--sidebar-default-width);
     min-width: var(--sidebar-min-width);
 
+    overflow-y: auto;
     
     background-color: #202020;
 
